--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,6 +3,10 @@ header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 30px;
+    position: sticky;
+    top: 0;
+    background-color: white;
+
 
     .logo {
         height: 100%;
@@ -42,7 +46,8 @@ header {
                 height: 30px;
                 background-size: cover;
                 background-repeat: no-repeat;
-                img{
+
+                img {
                     width: 25px;
                 }
             }
@@ -102,8 +107,7 @@ header {
             background-position: center;
             background-size: cover;
 
-            &::after {
-                content: '0';
+            .total {
                 position: absolute;
                 right: 0;
                 top: 0;
@@ -126,8 +130,9 @@ header {
         position: relative;
     }
 
-    .dropdownWrap{
+    .dropdownWrap {
         position: relative;
+
         .dropdownMenu {
             position: absolute;
             top: -50px;
@@ -142,18 +147,18 @@ header {
             justify-content: center;
             align-items: center;
             gap: 20px;
-    
+
             img {
                 width: 20px;
                 align-self: flex-start;
             }
-    
+
             ul {
                 list-style-type: none;
                 display: flex;
                 flex-direction: column;
                 gap: 10px;
-              
+
                 li {
                     height: 40px;
                     width: 100%;
@@ -170,7 +175,98 @@ header {
         }
     }
 
-    
+    .bucketWrap {
+        top: 100%;
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.479);
+        backdrop-filter: blur(3px);
+        box-shadow: 0px -5px 15px 0px rgba(0, 0, 0, 0.2);
 
+        .bucket {
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;
+            background-color: white;
+            right: 0;
+            min-height: 200px;
+            width: 50%;
+            border-top: 1px solid gray;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
+            .product {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                width: 100%;
+                height: 100px;
+                padding: 0 20px 0 20px;
+
+                img {
+                    height: 80%;
+                    justify-self: flex-start;
+                }
+
+                b{
+                    min-width: 25%;
+                    text-align: center;
+                }
+
+                p{
+                    min-width: 20%;
+                }
+
+                .bin {
+                    height: 20px;
+                }
+
+                .buttons {
+                    width: 100px;
+                    height: 30px;
+                    border: 1px solid gray;
+                    border-radius: 5px;
+                    margin: 0 20px 0 20px;
+
+                    input {
+                        font-size: 1.2rem;
+                        font-weight: bold;
+                        background-color: transparent;
+                        border: none;
+                        height: 100%;
+                        width: 33%;
+                        text-align: center;
+                    }
+                }
+            }
+
+            .checkout {
+                height: 100px;
+                width: 100%;
+                border-bottom-left-radius: 10px;
+                border-bottom-right-radius: 10px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0 20px 0 20px;
+                
+                b {
+                    font-size: 1.2rem;
+                }
+
+                input {
+                    width: 35%;
+                    height: 60%;
+                    background-color: white;
+                    border: none;
+                    border-radius: 10px;
+                    font-weight: bold;
+                }
+            }
+        }
+    }
 
 }
