--- a/src/app/pages/actions/actions.component.scss
+++ b/src/app/pages/actions/actions.component.scss
@@ -20,10 +20,10 @@
 .wrap {
     padding: 10px;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     .card {
         margin-bottom: 10px;
+        margin-right: 3%;
         width: 30%;
         height: 300px;
         border: 4px solid #B5D8F7;
@@ -34,7 +34,6 @@
         justify-content: space-around;
 
         img {
-
             height: 100px;
         }
 
