--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -44,7 +44,7 @@
             <b>(097) 878 08 37</b>
             <P>Працюємо з <b>11:00</b> до <b>23:59</b></P>
         </div>
-        <div class="login" [routerLink]="[ '/admin']"></div>
+        <div class="login" [routerLink]="['/'+loginUrl]"></div>
     </div>
 
     <div class="checkout" (click)="checkOutToggle()">
