--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -13,7 +13,7 @@
             <p>Замовлення</p>
         </div>
 
-        <button class="exit" [routerLink]="['/']">ВИХІД</button>
+        <button class="exit" (click)="logout()">ВИХІД</button>
     </div>
     <router-outlet></router-outlet>
 </div>
