--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -184,6 +184,28 @@ header {
         backdrop-filter: blur(3px);
         box-shadow: 0px -5px 15px 0px rgba(0, 0, 0, 0.2);
 
+        .empty{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+
+            margin-top: 20px;
+            p{
+                font-weight: bold;
+            }
+
+            input{
+                width: 300px;
+                height: 50px;
+                border: none;
+                border-radius: 5px;
+                background-color: #AFD5F5;
+                font-weight: bold;
+                margin-bottom: 10px;
+            }
+        }
+
         .bucket {
             position: absolute;
             display: flex;
