--- a/src/app/pages/user-cabinet/user-cabinet.component.scss
+++ b/src/app/pages/user-cabinet/user-cabinet.component.scss
@@ -1,21 +1,42 @@
-div{
-    margin: 40px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 40px;
 
-    span{
-        font-weight: bold;
-        font-size: 1.5rem;
-    }
-    
-    .exit{
-        border: none;
-        width: 90px;
-        height: 60px;
-        background-color: #AFD5F5;
-        font-weight: bold;
-        border-radius: 10px;
+
+.wrap{
+    height: 100%;
+    width: 60%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+
+
+    .left{
+        height: 300px;
+        width: 15%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 30px;
+
+        .option{
+            width: 100%;
+            height: 20%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-right: 1px solid gray;
+            border-bottom: 1px solid gray;
+        }
+
+        .exit{
+            border: none;
+            margin-top: 30px;
+            width: 90px;
+            height: 60px;
+            background-color: #AFD5F5;
+            font-weight: bold;
+            border-radius: 10px;
+        }
     }
 }
+
+
+
