--- a/src/app/pages/user-cabinet/user-cabinet.component.html
+++ b/src/app/pages/user-cabinet/user-cabinet.component.html
@@ -4,7 +4,7 @@
             <p>Акції</p>
         </div>
         <div [routerLink]="[ 'orders' ]" [routerLinkActive]="['adminActive']" class="option">
-            <p>Категорії</p>
+            <p>Історія замовлень</p>
         </div>
         <input class="exit" (click)="logout()" type="button" value="ВИХІД">
     </div>
