--- a/src/app/pages/user-cabinet/user-cabinet.component.scss
+++ b/src/app/pages/user-cabinet/user-cabinet.component.scss
@@ -1,5 +1,3 @@
-
-
 .wrap{
     height: 100%;
     width: 60%;
@@ -13,6 +11,7 @@
         width: 15%;
         display: flex;
         flex-direction: column;
+        text-align: center;
         align-items: center;
         margin-left: 30px;
 
