--- a/src/app/pages/user-cabinet/orders/orders.component.html
+++ b/src/app/pages/user-cabinet/orders/orders.component.html
@@ -1,1 +1,18 @@
-<p>orders works!</p>
+<table>
+    <tr>
+        <th>№ замовлення</th>
+        <th>Дата та час</th>
+        <th>Адреса</th>
+        <th>Сума</th>
+        <th>Статус</th>
+        <th></th>
+    </tr>
+    <tr>
+        <td>test</td>
+        <td>test</td>
+        <td>test</td>
+        <td>test</td>
+        <td>test</td>
+        <td>test</td>
+    </tr>
+</table>
