--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="info">
-        <div class="phone"></div>
+        <div class="phone" (click)="openPhoneDialog()"></div>
         <div class="time">
             <b>(097) 878 08 37</b>
             <P>Працюємо з <b>11:00</b> до <b>23:59</b></P>
